Home page modified and images folder added

--- a/index.html
+++ b/index.html
@@ -1,72 +1,177 @@
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <!DOCTYPE html>
 <html>
 <head>
-	<title>:: Blood Bank ::</title>
+  <title>:: Blood Bank ::</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style type="text/css">
+    .color
+    {
+      background-color: #ffffff;
+      height:10px !important;
+      margin: auto;
+    }
+    body
+    {
+      background-color: #F5F5F5;
+      font-family:'Open-Sans', sans-serif;
+      font-size: 14px;
+      line-height: 22px;
+    }
+    .container
+    {
+      margin-top: 20px;
+      margin-bottom: 10px;
+    }
+    #nav-main {
+    width: 100%;
+    display: block;
+    margin: 0px auto;
+    background: #fff;
+    border-top: 1.5px solid #e9e9e9;
+    border-bottom: 3.5px solid #ddd;
+    }
+    #nav-main ul li a {
+    padding: 5px 10px 6px 10px;
+    display: inline;
+    line-height: 46px;
+    margin: 0px auto;
+    } 
+    #nav-main a {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    text-decoration: none;
+    font-weight: 700;
+    text-align: center;
+    color: #333333;
+    }
+    #nav-main ul {
+    width: 560px;
+    display: block;
+    overflow: hidden;
+    text-align: center;
+    margin: 0 auto;
+    margin-left: 0px;
+    padding: 0;
+    }
+    #nav-main ul li {
+    list-style: none;
+    display: inline;
+    position: relative;
+    padding: 0 1px;
+    }
+    #nav-main ul li a {
+    padding: 5px 10px 6px 10px;
+    display: inline;
+    line-height: 46px;
+    margin: 0px auto;
+    }
+    #nav-main ul li a:hover {
+    color:white;
+    background-color: #ad1457;
+    border-radius: 3px;
+    box-shadow: inset 0 0px 3px #608a0f;
+    }
+    ul li.current > a {
+    color: white !important;
+    background: #ad1457;
+    border-radius: 3px;
+    box-shadow: inset 0 0px 3px #608a0f;
+    }
+    .btn
+    {
+      font-family: 'Open Sans', sans-serif;
+      color:white;
+      background-color: #ad1457;
+      width: 85px;
+      margin-top: -5px;
+     
+    }
+    .btn:hover
+    {
+      font-family: 'Open Sans', sans-serif;
+      color:white;
+      background-color: #ad1457 !important;
+    }
+    .inpt
+    {
+      border-radius: 2px;
+      box-shadow: inset 0 0px 3px #608a0f;
+      height : 35px;
+    }
+    .login
+    {
+      margin-top: -50px;
+      margin-bottom: 4px;
+    }
+    div.reset > a
+    {
+      font-family: 'Open Sans', sans-serif;
+      color: #ad1457;
+      margin-left: 800px;
+    }
+  </style>
 </head>
 <body>
-	<div>
-		Hello
-	</div>
-	<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
-      <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+  <div class="container">
+    <img src="./images/ibb-logo.png" alt="Blood Bank">
+  </div>
+  <div class="login">
+    <form role="form" action="" method="POST">
+      <input style="margin-left: 800px;" type="email" name="email" placeholder="  Username" class="inpt">
+      <input style="margin-left: 5px;" type="password" name="passwd" placeholder="  Password" class="inpt">
+      <button type="submit" name="login" class="btn btn-default"><strong>Login</strong></button>
+    </form>
+  </div>
+  <div class="reset" style="margin-bottom:2px;">
+    <a href="#"><strong><u>Reset Password</u></strong></a>
+  </div>
+  <div id="nav-main">
+    <ul>
+      <li class="current" onclick="myfunction1()" id="home"><a href="#">HOME</a></li>
+      <li onclick="myfunction2()" id="aboutus" class=""><a href="#">ABOUT US</a></li>
+      <li onclick="myfunction3()" id="faq" class=""><a href="#">FAQs</a></li>
+      <li onclick="myfunction4()" id="contact" class=""><a href="#">CONTACT US</a></li>
+    </ul>
+  </div>
+  <script type="text/javascript">
+    function myfunction1()
+    {
+      document.getElementById("home").classList.add("current");
+      document.getElementById("aboutus").classList.remove("current");
+      document.getElementById("faq").classList.remove("current");
+      document.getElementById("contact").classList.remove("current");
+    }
+    function myfunction2()
+    {
+      document.getElementById("aboutus").classList.add("current");
+      document.getElementById("home").classList.remove("current");
+      document.getElementById("faq").classList.remove("current");
+      document.getElementById("contact").classList.remove("current");
+    }
+    function myfunction3()
+    {
+      document.getElementById("faq").classList.add("current");
+      document.getElementById("home").classList.remove("current");
+      document.getElementById("aboutus").classList.remove("current");
+      document.getElementById("contact").classList.remove("current");
+    }
+    function myfunction4()
+    {
+      document.getElementById("contact").classList.add("current");
+      document.getElementById("home").classList.remove("current");
+      document.getElementById("aboutus").classList.remove("current");
+      document.getElementById("faq").classList.remove("current");
+    }
+  </script>
 
 </body>
 </html>
