--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     .inpt
     {
       border-radius: 2px;
-      box-shadow: inset 0 0px 3px #608a0f;
+      box-shadow: inset 0 0px 3px #ad1457;
       height : 35px;
     }
     .login
