Icon added to title

--- a/faq.html
+++ b/faq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>:: Blood Bank ::</title>
+  <title>Blood Bank </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">  
   <!-- Latest compiled and minified CSS -->
@@ -12,6 +12,8 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  <link rel="shortcut icon" href="./images/drop.jpeg">
   <style type="text/css">
     .color
     {
@@ -196,7 +198,7 @@
 	<br><img class="bullet" src="./images/download.jpeg">Has not donated blood in the last 3 months.
 	<br><img class="bullet" src="./images/download.jpeg">Off antibiotics for 24 hours.
 	<br><img class="bullet" src="./images/download.jpeg">Symptom free for at least 3 days following a cold, cough or flu.
-	<br><br><strong><b>important:</b></strong> If you are receiving medical treatment, please consult your doctor before donating blood.
+	<br><br><strong><b>Important:</b></strong> If you are receiving medical treatment, please consult your doctor before donating blood.
 
 	<br><br><br><strong style="font-size:20px;">WHO CANNOT DONATE BLOOD?</strong>
 	<br><img class="bullet" src="./images/download.jpeg">Anyone that has one or more of the following conditions:
