--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>:: Blood Bank ::</title>
+  <title> Blood Bank </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">  
   <!-- Latest compiled and minified CSS -->
@@ -12,6 +12,9 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  <link rel="shortcut icon" href="./images/drop.jpeg">
+
   <style type="text/css">
     .color
     {
@@ -156,7 +159,7 @@
     <p><b>Copyright&nbsp;</b>&copy; DharVirPa | Design and Development. All Rights Reserved.</p>
   </footer>
   <!--footer ends-->
-  
+
   <script type="text/javascript">
     function myfunction1()
     {
