ERROR error removed

--- a/error.html
+++ b/error.html
@@ -19,7 +19,7 @@
             <div class='_2'>WAS NOT FOUND</div>
         </div>
 </body>
-</html>>
+</html>
 
 <style type="text/css">
     
@@ -111,7 +111,7 @@ body{
                 top: -0.75em;
                 font-size: 2em;
                 padding: 0 0.2em;
-                background: #33cc99;
+                /*background: #33cc99;*/
             }
             
             .cloud {
@@ -245,6 +245,6 @@ body{
                 0% {margin-left: 1000px;}
                 100% {margin-left: -1000px;}
             }
-</style>>
+</style>
 
 
